# CORDELIA

./: .gitignore  CHANGELOG.md  DOGMAs.md  README.md  _GIT.command  __***CHOOSE-iadc.command  __***CHOOSE.command  __***HOME-iadc-realtime.command  __***HOME.command  __***KILLHIM.command  __***SCRIPT.command  __***SERV.command  __*HOME--jack.command  __find_a_word.command  __git-push.command  _list_alwayson.txt  _list_instr.txt  cliff.toml  cordelia-good_practice.md  crystal copy.csd  crystal.cor  crystal2.cor  exemple_instr.json  journal_intime.md  list_opcode-in|out.md  new_lang_proj.md  pyproject.toml  todo.md
*/: NEONCORDELIA-full.py  cordelia.py  exemple_instr.json  gen_instr.rb  look_all_macros.rb  main.py  make_cuelist.rb  module.py  opcodes.py  test-instr.py  test-subjson.py
NOTEs/: Cordelia.pages
NeonCORDELIA-2/: cordelia.py  main.py
_CORE/: livecode-settings.csd  livecode.csd
_GEN/: arm1gen_10.orc  bite.orc  cat.orc  classic.orc  eau.orc  eclassic.orc  eclassicr.orc  isotrap.orc  kazan.orc  kazanr.orc  likearev.orc  mirror.orc  oddharm.orc  ropy.orc  spina.orc  tig.orc
_MID/: Silence.mid  preludes_1_8_(c)galimberti.mid  tchajkowski_trio_for_violin_cello_piano_50_1-2_(c)harfesoft.mid  title-theme.mid
_MOD/: abij.orc  abj.orc  bij.orc  chebij.orc  combij.orc  convij.orc  convij2.orc  convij8.orc  crispij.orc  cutij.orc  dc.orc  decij.orc  delij.orc  delij2.orc  dio.orc  duij.orc  dustij.orc  flanij.orc  flanijp.orc  flanj.orc  flij.orc  folij.orc  folij2.orc  folij3.orc  folijd.orc  getmeout.orc  glass.orc  guitar.orc  irpno.orc  irvln.orc  moij.orc  (+49 more)
(+3147 files in other folders)
